--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2>Ningún mensaje encontrado!</h2>
                 <h3>Ingresa el texto que quieras encriptar o desencriptar.</h3>
             </div>
-            <button class="blanco copiar">copiar</button>
+            <button class="blanco copiar" onclick="btnCopiar()">copiar</button>
         </div>
     </div>
     <footer> 
